fix - overflow x Wrap dlv in a styled div to solve overflow x property being applied to the whole page.

--- a/root/frontend/src/components/DetailedListView/DetailedListView.css
+++ b/root/frontend/src/components/DetailedListView/DetailedListView.css
@@ -2,11 +2,14 @@
   font-family: Verdana;
 }
 
+.container {
+  overflow-x: hidden;
+}
+
 .dlv-container {
   height: auto;
   display: flex;
   flex-flow: column;
-  overflow-x: hidden;
 }
 
 .dlv-header {
